--- a/TONWalletKit-Android/impl/src/main/assets/walletkit/index.html
+++ b/TONWalletKit-Android/impl/src/main/assets/walletkit/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TON WalletKit Bridge</title>
-</head>
-<body>
-    <!-- Load the main WalletKit bridge bundle -->
-    <script type="module" src="./walletkit-android-bridge.mjs"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WalletKit Android Bridge</title>
+  </head>
+  <body>
+    <script type="module" src="walletkit-android-bridge.mjs"></script>
+  </body>
 </html>
