--- a/TONWalletKit-Android/impl/src/androidTest/assets/mock-bridge/missing-callid.html
+++ b/TONWalletKit-Android/impl/src/androidTest/assets/mock-bridge/missing-callid.html
@@ -1,3 +1,41 @@
 <!DOCTYPE html>
-<html><head><meta charset="UTF-8"><title>Missing Call ID</title></head>
-<body><script type="module" src="missing-callid-mock.mjs"></script></body></html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Missing Call ID</title>
+</head>
+<body>
+<script>
+    /**
+     * Scenario #3: RPC response with missing call ID
+     */
+
+    function sendToAndroid(payload) {
+        const message = JSON.stringify(payload);
+        console.log('[Missing CallID] Sending to Android:', message);
+        if (window.WalletKitNative && window.WalletKitNative.postMessage) {
+            window.WalletKitNative.postMessage(message);
+        } else {
+            console.error('[Missing CallID] WalletKitNative.postMessage not available!');
+        }
+    }
+
+    function sendReadyEvent(network) {
+        sendToAndroid({ kind: 'ready', network: network, tonApiUrl: 'https://testnet.tonapi.io' });
+    }
+
+    setTimeout(function() { sendReadyEvent('testnet'); }, 100);
+
+    window.__walletkitCall = function(id, method, params) {
+        setTimeout(function() {
+            // Send response without id field
+            sendToAndroid({
+                kind: 'response',
+                result: { success: true }
+                // Missing id!
+            });
+        }, 50);
+    };
+</script>
+</body>
+</html>
