--- a/TONWalletKit-Android/impl/src/androidTest/assets/mock-bridge/response-after-timeout.html
+++ b/TONWalletKit-Android/impl/src/androidTest/assets/mock-bridge/response-after-timeout.html
@@ -1,3 +1,43 @@
 <!DOCTYPE html>
-<html><head><meta charset="UTF-8"><title>Response After Timeout</title></head>
-<body><script type="module" src="response-after-timeout-mock.mjs"></script></body></html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Response After Timeout</title>
+</head>
+<body>
+<script>
+    /**
+     * Scenario #2: RPC response arrives after timeout/cancellation
+     */
+
+    function sendToAndroid(payload) {
+        const message = JSON.stringify(payload);
+        console.log('[Response After Timeout] Sending to Android:', message);
+        if (window.WalletKitNative && window.WalletKitNative.postMessage) {
+            window.WalletKitNative.postMessage(message);
+        } else {
+            console.error('[Response After Timeout] WalletKitNative.postMessage not available!');
+        }
+    }
+
+    function sendReadyEvent(network) {
+        sendToAndroid({ kind: 'ready', network: network, tonApiUrl: 'https://testnet.tonapi.io' });
+    }
+
+    function sendRpcResponse(id, result, error) {
+        const payload = { kind: 'response', id: id };
+        if (error) { payload.error = error; } else { payload.result = result; }
+        sendToAndroid(payload);
+    }
+
+    setTimeout(function() { sendReadyEvent('testnet'); }, 100);
+
+    window.__walletkitCall = function(id, method, params) {
+        // Send response after 30 seconds (way beyond timeout)
+        setTimeout(function() {
+            sendRpcResponse(id, { delayed: true, method: method });
+        }, 30000);
+    };
+</script>
+</body>
+</html>
