--- a/TONWalletKit-Android/impl/src/androidTest/assets/mock-bridge/storage-persistence-scenarios.html
+++ b/TONWalletKit-Android/impl/src/androidTest/assets/mock-bridge/storage-persistence-scenarios.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Storage & Persistence Scenarios</title>
-    <script type="module">
-        import * as scenarios from './storage-persistence-scenarios.mjs';
-        
-        window.addEventListener('DOMContentLoaded', () => {
-            const urlParams = new URLSearchParams(window.location.search);
-            const scenario = urlParams.get('scenario');
-            
-            if (scenario && window.storagePersistenceScenarios && window.storagePersistenceScenarios[scenario]) {
-                console.log('Running scenario:', scenario);
-                window.storagePersistenceScenarios[scenario]();
-            } else {
-                console.error('Unknown scenario:', scenario);
-            }
-        });
-    </script>
+    <meta charset="UTF-8">
+    <title>Storage Persistence Scenarios</title>
 </head>
 <body>
-    <h1>Storage & Persistence Test Scenarios</h1>
-    <p id="status">Initializing...</p>
+    <h1>Mock Bridge - Storage Persistence Scenarios</h1>
+    <script>
+        function sendToAndroid(payload) {
+            var message = JSON.stringify(payload);
+            console.log('[Mock] Sending to Android:', message);
+            if (window.WalletKitNative && window.WalletKitNative.postMessage) {
+                window.WalletKitNative.postMessage(message);
+            }
+        }
+
+        function sendReadyEvent(network, tonApiUrl) {
+            sendToAndroid({ kind: 'ready', network: network || 'testnet', tonApiUrl: tonApiUrl || 'https://testnet.tonapi.io' });
+        }
+
+        function sendRpcResponse(id, result, error) {
+            var payload = { kind: 'response', id: id };
+            if (error) { payload.error = error; } else { payload.result = result || {}; }
+            sendToAndroid(payload);
+        }
+
+        setTimeout(function() { sendReadyEvent('testnet'); }, 100);
+
+        window.__walletkitCall = function(id, method, params) {
+            console.log('[Mock] Call:', method);
+            sendRpcResponse(id, { success: true });
+        };
+    </script>
 </body>
 </html>
