--- a/TONWalletKit-Android/impl/src/androidTest/assets/mock-bridge/unknown-call-id.html
+++ b/TONWalletKit-Android/impl/src/androidTest/assets/mock-bridge/unknown-call-id.html
@@ -7,6 +7,54 @@
 </head>
 <body>
 <h3>Mock Bridge - Unknown Call ID</h3>
-<script type="module" src="unknown-call-id-mock.mjs"></script>
+<script>
+    /**
+     * Edge Case: RPC Response for Unknown Call ID
+     * 
+     * Scenario #4: JS sends response with call ID that has no pending deferred in Android
+     */
+
+    function sendToAndroid(payload) {
+        const message = JSON.stringify(payload);
+        console.log('[UNKNOWN_ID] Sending to Android:', message);
+        if (window.WalletKitNative && window.WalletKitNative.postMessage) {
+            window.WalletKitNative.postMessage(message);
+        } else {
+            console.error('[UNKNOWN_ID] WalletKitNative.postMessage not available!');
+        }
+    }
+
+    function sendReadyEvent(network, tonApiUrl) {
+        sendToAndroid({ kind: 'ready', network: network, tonApiUrl: tonApiUrl });
+    }
+
+    function sendRpcResponse(id, result, error) {
+        const payload = { kind: 'response', id: id };
+        if (error) { payload.error = error; } else { payload.result = result; }
+        sendToAndroid(payload);
+    }
+
+    setTimeout(function() {
+        sendReadyEvent('testnet', 'https://testnet.tonapi.io');
+        
+        // Send response for non-existent call ID
+        setTimeout(function() {
+            console.log('[UNKNOWN_ID] Sending response for unknown call ID');
+            sendRpcResponse('non-existent-call-id-12345', { data: 'surprise!' });
+        }, 200);
+    }, 100);
+
+    window.__walletkitCall = function(id, method, params) {
+        // Also send valid response
+        sendRpcResponse(id, { success: true });
+        
+        // But then send ANOTHER response with wrong ID
+        setTimeout(function() {
+            sendRpcResponse(id + '-wrong', { error: 'duplicate' });
+        }, 100);
+    };
+
+    console.log('[UNKNOWN_ID] Mock initialized');
+</script>
 </body>
 </html>
